src/objects/frMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Conflict_Resolution__c</fullName>
        <defaultValue>&quot;overwrite&quot;</defaultValue>
        <description>How should existing data be reconciled with incoming data from Funraise</description>
        <inlineHelpText>How should existing data be reconciled with incoming data from Funraise</inlineHelpText>
        <label>Conflict Resolution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constant_Value__c</fullName>
        <label>Constant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Constant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether or not this mapping should use a value from the Funraise platform (false) or a constant value (true)</description>
        <label>Is Constant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fr_Name__c</fullName>
        <label>Funraise Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf_Name__c</fullName>
        <label>Salesforce Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Funraise Field Mapping</label>
</CustomObject>